--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -49,7 +49,7 @@
 					<section>
 						<h3>Présentation</h3>
 						<article>
-							
+							Futur ingénieur en informatique passioné par les dernières technologies, , Curieux, Esprit d'équipe, Autonome.
 						</article>
 					</section>
 				</div>
