--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -52,6 +52,53 @@
 							Futur ingénieur en informatique passioné par les dernières technologies, , Curieux, Esprit d'équipe, Autonome.
 						</article>
 					</section>
+					<hr>
+					<section>
+						<h3>Formation</h3>
+						<article class="row">
+							<div class="col-md-11">
+							<b>Master 2 Développement logiciels des Système d’Information - Double diplôme</b>
+							<i>UNIVERSITÉ DE BRETAGNE OCCIDENTALE - UNIVERSITÉ CADI AYYAD</i>
+							</div>
+							<div class="col-md-1">
+							<small>2017 - 2018</small>
+							</div>
+						</article>
+						<article class="row"> 
+							<div class="col-md-11">
+							<b>Master 1 Ingénierie des Systèmes d'Information</b>
+							<i>UNIVERSITÉ CADI AYYAD</i>
+							</div>
+							<div class="col-md-1">
+							<small>2016 - 2017</small>
+							</div>
+						</article>
+						<article class="row"> 
+							<div class="col-md-11">
+							<b>Licence en Sciences Mathématiques et Informatique</b>
+							<i>UNIVERSITÉ CADI AYYAD</i>
+							</div>
+							<div class="col-md-1">
+							<small>2015 - 2016</small>
+							</div>
+						</article>
+						<article class="row"> 
+							<div class="col-md-11">
+							<b>Diplôme d'Etude Universitaire en Sciences Mathématiques et Informatique</b>
+							<i>UNIVERSITÉ CADI AYYAD</i>
+							</div>
+							<div class="col-md-1">
+							<small>2014 - 2015</small>
+							</div>
+						</article>
+					</section>
+					<hr>
+					<section>
+						<h3>Expériences Professionnelles</h3>
+						<article>
+							<h5>Faculté des Sciences Semlalia </h5>
+						</article>
+					</section>
 				</div>
 
 		</div>
