--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -49,58 +49,168 @@
 					<section>
 						<h3>Présentation</h3>
 						<article>
-							Futur ingénieur en informatique passioné par les dernières technologies, , Curieux, Esprit d'équipe, Autonome.
+							Futur ingénieur en informatique passioné par les dernières technologies, Curieux, Esprit d'équipe, Autonome.
 						</article>
 					</section>
 					<hr>
 					<section>
 						<h3>Formation</h3>
-						<article class="row">
-							<div class="col-md-11">
-							<b>Master 2 Développement logiciels des Système d’Information - Double diplôme</b>
-							<i>UNIVERSITÉ DE BRETAGNE OCCIDENTALE - UNIVERSITÉ CADI AYYAD</i>
-							</div>
-							<div class="col-md-1">
-							<small>2017 - 2018</small>
-							</div>
-						</article>
-						<article class="row"> 
-							<div class="col-md-11">
-							<b>Master 1 Ingénierie des Systèmes d'Information</b>
-							<i>UNIVERSITÉ CADI AYYAD</i>
-							</div>
-							<div class="col-md-1">
-							<small>2016 - 2017</small>
-							</div>
-						</article>
-						<article class="row"> 
-							<div class="col-md-11">
-							<b>Licence en Sciences Mathématiques et Informatique</b>
-							<i>UNIVERSITÉ CADI AYYAD</i>
-							</div>
-							<div class="col-md-1">
-							<small>2015 - 2016</small>
-							</div>
-						</article>
-						<article class="row"> 
-							<div class="col-md-11">
-							<b>Diplôme d'Etude Universitaire en Sciences Mathématiques et Informatique</b>
-							<i>UNIVERSITÉ CADI AYYAD</i>
-							</div>
-							<div class="col-md-1">
-							<small>2014 - 2015</small>
-							</div>
-						</article>
+						<ul>
+							<li>
+								<article class="row">
+									<div class="col-md-10">
+									<b>Master 2 Développement logiciels des Système d’Information - Double diplôme</b>
+									<i>UNIVERSITÉ DE BRETAGNE OCCIDENTALE - UNIVERSITÉ CADI AYYAD</i>
+									</div>
+									<div class="col-md-2">
+									<small>2017 - 2018</small>
+									</div>
+								</article>
+							</li>
+							<li>
+								<article class="row"> 
+									<div class="col-md-10">
+									<b>Master 1 Ingénierie des Systèmes d'Information</b>
+									<i>UNIVERSITÉ CADI AYYAD</i>
+									</div>
+									<div class="col-md-2">
+									<small>2016 - 2017</small>
+									</div>
+								</article>
+							</li>
+							<li>
+								<article class="row"> 
+									<div class="col-md-10">
+									<b>Licence en Sciences Mathématiques et Informatique</b>
+									<i>UNIVERSITÉ CADI AYYAD</i>
+									</div>
+									<div class="col-md-2">
+									<small>2015 - 2016</small>
+									</div>
+								</article>
+							</li>
+							<li>
+								<article class="row"> 
+									<div class="col-md-10">
+									<b>Diplôme d'Etude Universitaire en Sciences Mathématiques et Informatique</b>
+									<i>UNIVERSITÉ CADI AYYAD</i>
+									</div>
+									<div class="col-md-2">
+									<small>2014 - 2015</small>
+									</div>
+								</article>
+							</li>
+						</ul>
 					</section>
 					<hr>
 					<section>
 						<h3>Expériences Professionnelles</h3>
-						<article>
-							<h5>Faculté des Sciences Semlalia </h5>
+						<ul>
+							<li>
+								<article class="row">
+									<div class="col-md-10">
+										<h6>Faculté des Sciences Semlalia - 
+										<i>Stage</i></h6>
+									<i>GESTION DE SERVICE</i>
+									<ul>
+										<li>
+											<i>Mission : </i>
+											Analyse, conception, réalisation et déploiement d’une application web pour la gestion du service des relations extérieures de la FSSM.
+										</li>
+										<li>
+											<i>Objectif : </i>
+											Archivage des données relatives aux projets de la recherche scientifique, gestion des publications des doctorants, suivi du budget, ...
+										</li>
+										<li>
+											<i>Technologies : </i>
+											Symfony 3, Bootstrap3, AJAX. Disponible sur le lien : 
+											<a href="http://sre.fssm.uca.ma/app.php">http://sre.fssm.uca.ma/app.php</a>
+										</li>
+									</ul>
+									</div>
+									<div class="col-md-2">
+										<small>Marrakech, Maroc</small>
+										<br>
+										<small>Octobre 2016 - Juin 2017 </small>
+									</div>
+								</article>
+							</li>
+							<li>
+								<article class="row">
+									<div class="col-md-10">
+										<h6>SMART GEO -  
+										<i>Stage</i></h6>
+									<i>GESTION DE CABINET</i>
+									<ul>
+										<li>
+											<i>Mission : </i>
+											Analyse, conception et réalisation d’une application Web pour la gestion et le pilotage d’un cabinet géométre .
+										</li>
+										<li>
+											<i>Objectif : </i>
+											Gestion des utilisateurs, archivage des données, Dashbord interactivité de paiement, gestion des factures...
+										</li>
+										<li>
+											<i>Technologies : </i>
+											Symfony 3, HTML5, Bootstrap 3, JAVASCRIPT...
+										</li>
+									</ul>
+									</div>
+									<div class="col-md-2">
+										<small>Marrakech, Maroc</small>
+										<br>
+										<small>Mai - Jui 2016 </small>
+									</div>
+								</article>
+							</li>
+						</ul>
+					</section>
+					<hr>
+					<section>
+						<h3>Compétences</h3>
+						<article class="row">
+							<div class="col-md-6">
+								<ul>
+									<li>
+										<i><b><h6>Base de données  
+										</h6></b></i>
+										SQL Server, MySQL, Oracle…
+									</li>
+									<li>
+										<i><b><h6>Environnement de développement  
+										</h6></b></i>
+										Eclipse, Symfony, Bootstrap, NetBeans, PhpStorm, Ionic, …
+									</li>
+									<li>
+										<i><b><h6>Outils   
+										</h6></b></i>
+										Git Hub, Power AMC, Photoshop, MS Project, Enterprise Architect …
+									</li>
+								</ul>
+							</div>
+							<div class="col-md-6">
+								<ul>
+									<li>
+									<i><b><h6>Entrepreneuriat   
+									</h6></b></i>
+									Formation Steer your Career Injaz AL Maghrib
+									</li>
+									<li>
+										<i><b><h6>Langages/Script   
+										</h6></b></i>
+										JavaEE, PHP, JavaScript, Java,HTML5, c/c++
+									</li>
+									<li>
+										<i><b><h6>Réseaux  
+										</h6></b></i>
+										Cisco Certified Networking Associates (CCNA1)
+									</li>
+								</ul>
+							</div>	
 						</article>
 					</section>
+					<hr>
 				</div>
-
 		</div>
 
 	
