--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -19,6 +19,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="stylesheet" type="text/css" href="css/Bootstrap/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/font-awesome/css/font-awesome.min.css">
 
 	<!--[if lt IE 9]>
 
@@ -32,11 +33,14 @@
 				<header class="row">
 					<div class=" col-md-10">
 						<h3>Ouguaour Imad</h3>
-						<h6>2, rue des Archives , Brest <br>
-							<a href="Mailo:#">ouguaour.imad@gmail.com
-							</a>
+
+						<h6> 2, rue des Archives , Brest<br>
+							<b><i class="fa fa-at" aria-hidden="true"></i></b>
+							<a href="#">ouguaour.imad@gmail.com
+							</a><br> 
+							<b><i class="fa fa-mobile"></i></b> 06 59 78 93 25
 						</h6>
-						<h4>Ingénieur en Informatique</h4>
+						<center><h4>Ingénieur en Informatique</h4></center>
 					</div>
 					<div class="col-md-2">
 						<br>
@@ -210,6 +214,55 @@
 						</article>
 					</section>
 					<hr>
+					<section>
+						<h3>Divers</h3>
+						<ul class="row">
+							<div class="col-md-6">
+							<li>
+								<article>
+									<h6>Langues</h6>
+									<ul>
+										<li>
+											Français <i>Niveau C1</i>
+
+										</li>
+										<li>
+											Anglais <i>Intérmédiaire 4 </i>
+										</li>
+										<li>
+											Arabe <i>Langue Maternelle</i>
+										</li>
+									</ul>
+								</article>
+							</li>
+							</div>
+							<div class="col-md-6">
+							<li>
+								<article>
+									<h6>Centres d'interêt</h6>
+									<ul>
+										<li>
+											Membre en association Chabab Atlas Jeune
+
+										</li>
+										<li>
+											Natation, Fotball, ...
+										</li>
+									</ul>
+								</article>
+							</li>
+							</div>
+						</ul>
+					</section>
+					<hr>
+					<section>
+						<footer>
+							<i style="color: darkblue;" class="fa fa-facebook-square"></i>
+							<b>Imad Ouguaour</b>
+							<i style="color: 0.119.181" class="fa fa-linkedin-square" aria-hidden="true"></i>
+							<b>Imad Ouguaour</b>
+						</footer>
+					</section>
 				</div>
 		</div>
 
